fixed overlay test - removed top spacing - 23:03 8/4/17

--- a/css/Style.css
+++ b/css/Style.css
@@ -313,7 +313,6 @@ text-shadow:
 	font-size: 70px;
 	color: #FFFF6E;
     text-align: center;
-	top: 50%;
 	letter-spacing: 2px;
     text-shadow: 0 0 10px darkblue;
 }
@@ -325,6 +324,7 @@ text-shadow:
     transform: translateY(-50%);
 }
 #overlay-div {
+    position: relative;
     height: 100%;
 }
 
